2019-01-19  Robby Stephenson  <robby@periapsis.org>

	* Fixed bug reading Title from KinoPoisk (Bug 403184).

2019-01-04  Robby Stephenson  <robby@periapsis.org>

	* Fixed bug with setting IMDB rating in various locales (Bug 401894).

2019-01-02  Robby Stephenson  <robby@periapsis.org>

	* Added Amazon sites for BR, AU, IN, MX, and TR.

2018-12-18  Robby Stephenson  <robby@periapsis.org>

	* Released Tellico 3.1.4.

2018-12-17  Robby Stephenson  <robby@periapsis.org>

	* Updated Kino.de data source.

2018-12-09  Robby Stephenson  <robby@periapsis.org>

	* Updated KinoPoisk.ru data source.

2018-10-30  Robby Stephenson  <robby@periapsis.org>

	* Updated bedetheque.com data source to use https.

2018-10-24  Robby Stephenson  <robby@periapsis.org>

	* Fixed bug to escape the group name when filtering in the Group View (Bug 399928).

2018-10-02  Robby Stephenson  <robby@periapsis.org>

	* Fixed bug when using a regular expression for filtering in a number field (Bug 399323).

2018-09-02  Robby Stephenson  <robby@periapsis.org>

	* Released Tellico 3.1.3.
	* Updated TheGamesDB data source.

2018-08-24  Robby Stephenson  <robby@periapsis.org>

	* Updated Amazon source to include multiple content listings in movie plots (Bug 396211).

2018-08-22  Robby Stephenson  <robby@periapsis.org>

	* Fixed LTR direction for year within Video template (Debian Bug #904259)

2018-07-08  Robby Stephenson  <robby@periapsis.org>

	* Fixed bug that cleared selection on modification when a filter was applied (Bug 394343).

2018-07-02  Robby Stephenson  <robby@periapsis.org>

	* Updated SRU fetcher to allow multiple marc records within a SRW result (DNB).

2018-04-18  Robby Stephenson  <robby@periapsis.org>

	* Updated IMDb data source (Bug 393239).

2018-04-02  Robby Stephenson  <robby@periapsis.org>

	* Updated BibTeXML importer.

2018-03-28  Robby Stephenson  <robby@periapsis.org>

	* Fixed compilation for Qt 5.6 (Bug 392457).

2018-03-28  Robby Stephenson  <robby@periapsis.org>
